# jacobian.org

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  app.json  docker-compose.override.yaml  docker-compose.yaml  pyproject.toml  pytest.ini
.circleci/: config.yml
.cloudbuild/: deploy.yaml  release.sh
.github/workflows/: cicd.yml  deploy.yml  test-in-docker.yml  test.yml
blog/: admin.py  feeds.py  models.py  signals.py  views.py
blog/migrations/: 0002_auto_20150713_0551.py  0003_auto_20170926_0641.py  0004_metadata_json.py  0005_search_document.py  0006_gin_indexes.py  0007_metadata_default.py  0008_entry_tweet_html.py  0009_import_ref.py  0010_auto_20180918_1646.py  0011_entry_extra_head_html.py  0012_auto_20181031_2323.py  0013_auto_20181114_0859.py  0014_auto_20181119_1132.py  0015_auto_20181121_1401.py  0016_auto_20181121_1412.py  0017_remove_old_photo_models.py  0018_add_lat_lng_fields_to_base_model.py  0019_new_photo_model.py  0020_entry_summary.py
config/: settings.py  url_converters.py  urls.py
feedstats/: admin.py  models.py  tests.py  utils.py
jupyter-notebooks/: convert old blog entries to json.ipynb  convert pinboard.ipynb  convert pyvideo.ipynb  scrape lanyard.ipynb
resume/: resume.json  views.py
speaking_portfolio/: admin.py  apps.py  models.py  urls.py  views.py
templates/: archive_day.html  archive_month.html  archive_tag.html  archive_year.html  base.html  base_2col.html  bighead.html  blogmark.html  entry.html  entry_archive.html  homepage.html  quotation.html  resume.html  search.html  tags.html  tools.html
(+33 files in other folders)
