[tool.poetry]
name = "jacobian.org"
version = "0.1.0"
description = ""
authors = ["Jacob Kaplan-Moss <jacob@jacobian.org>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.1"
psycopg2 = "^2.8.4"
requests = "^2.22.0"
micawber = "^0.5.1"
typogrify = "^2.0.7"
django-postgres-unlimited-varchar = "^1.1.0"
whitenoise = "^5.0.1"
cloudflare = "^2.3.1"
beautifulsoup4 = "^4.8.1"

# dev version of constance to support Django 3
django-constance = { git = "https://github.com/jazzband/django-constance.git", rev = "917c2790d183a6ee5b248b499ac0ff471d59bdbe", extras = ["database"] }
jinja2 = "^2.10.3"
django-picklefield = "^2.0"
waitress = "^1.4.0"
pillow = "^6.2.1"
django-environ = "^0.4.5"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
pytest-cov = "^2.8.1"
django-debug-toolbar = "^2.1"
pytest-django = "^3.7.0"
factory_boy = "^2.12.0"
lxml = "^4.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
